# embedder

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  embedder  embedder.cpp  embedder.hpp  main.cpp
mteb/: my_embedder_wrapper.py  my_sentence_transformer.py  quick_test.py  run.py  test_performance.py
mteb/results/MySentenceTransformer/no_model_name_available/no_revision_available/: Banking77Classification.json
